add adtive to user db
